# wdp-ds

./: .gitignore  ContrastiveLearning.ipynb  README.md  app.py  application_config.yaml  dbs.py  decoder_worker.py  default_config.yaml  htk.py  initial_model.sh  model_deploy.sh  pipeline.py  thresholds.py  training_script.sh
analysis/: BaseClusteingAnalysis.ipynb  SequenceBucketing.ipynb
app/: app.yaml  db.py  main.py  requirements.txt  wdp_iap.py
app/wdp-ds-frontend/: angular.json  package.json
config/: alignment_config.yaml  annotation.yaml  application_config.yaml  auto_tuning.yaml  default_config.yaml  denise_experiment.yaml  induction_config.yaml  wordspotting.yaml
db_scripts/: README.md  audiofile_schema.sql  clustering_schema.sql  cors.json  ingest_annotations.py  ingest_clusters.py  pvl_schema.sql  silence_schema.sql
deploy/: app_deploy.sh  model_deploy.sh
dolphin_mnist/: pom.xml
dtw_index/: .gitignore  CMakeLists.txt  README.md
dtw_index/lib_indexing/: CMakeLists.txt  IndexingTypes.h  IndexingUtil.cpp  IndexingUtil.h  Serialization.cpp  Serialization.h  TimeSeriesIndex.cpp  TimeSeriesIndex.h
dtw_index/protos/: indexing.proto
dtw_index/scripts/: replay_keogh.py
dtw_index/server/: CMakeLists.txt  IndexingServer.cpp
dtw_index/test/: CMakeLists.txt  IndexingUtilTest.cpp  PerformanceTesting.cpp  SerializationTest.cpp
lib_dolphin/: audio.py  density.py  discrete.py  dtw.py  eval.py  extern_index.py  features.py  htk.py  htk_helpers.py  indexing.py  interest_points.py  neural_decoding.py  parameters.py  reporting.py  sequencing.py  sequential.py  statistics.py  template.html
ml/: README.md  audio.py  convnet.py  data_viz.py  model_analysis.py  silence_detector.py  train_convnet_features.py  train_lstm_auto_encoder.py  train_lstm_auto_encoder_variational.py  train_lstm_combined.py  train_lstm_features.py  train_silence_detector.py
ml_pipeline/: README.md  SoftDTW.ipynb  audio.py  audio.py~  audio_collection.py  baum_welch.pyx  classifier.py  data_augmentation.py  distributions.py  dtw.pyx  feature_extractor.py  fwd_bwd.pyx  generate_report.py  genetic_programming.py  health_checks.py  hidden_markov_model.py  hierarchical_clustering.pyx  integration_test_audio.py  logprob.py  markov_chain.py  msa.py  pipeline.py  plots.py  recursive.py  reporting_template.md  sequence_clustering.py  sequence_embedder.py  sequence_hashing.pyx  signature_whistle_induction.py  structured.py  structured_model.py  tokens.py  utils.py  variational_feature_extractor.py  viterbi.pyx
models/: Readme.md
notebooks/: HackyDecoder.ipynb  Housekeeping.ipynb  IndexingExperiment.ipynb  InterestPoints.ipynb  SilenceDetection.ipynb  TuningDecoder.ipynb
scripts/: AgglomerativeClusteringDTW.ipynb  DTWParallel.ipynb  DensityBasedDiscovery.ipynb  DiscoveryDTW.ipynb  OfflineClusteringExperiment.ipynb  OfflineDensityBasedDiscoveryExperiment.ipynb  README.md  SilenceDetector.ipynb  drive2cloudBycolab.py  enc_schema.sql  ingest_annotations.py  initial_model.sh  pvl_schema.sql  silence_schema.sql
static/: spectrogram.js
templates/: alignment_project.html  discovery.html  history.html
wdp-ds-frontend/: .gitignore  README.md  angular.json  package-lock.json  package.json
wdp-ds-spectrogram/: Cargo.toml  LICENSE_MIT  package-lock.json  test_env.sh
wdp-ds-spectrogram/src/: lib.rs
wdp-ds-spectrogram/www/: index.html  index.js  package-lock.json  package.json
(+579 files in other folders)
