[package]
name = "wdp-ds-spectrogram"
version = "0.1.0"
authors = ["Daniel Kohlsdorf <daniel.kohlsdorf@xing.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
rustfft = "3.0.0"
console_error_panic_hook = { version = "0.1.1", optional = true }
wee_alloc = { version = "0.4.2", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
  'ImageData',
  'CanvasRenderingContext2d',
  'console',
  'ImageBitmap'
]

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
